# Thymus-timeseries

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.html  README.md  README.rst  README_HELPERS.md  README_HELPERS.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: README.rst
src/: constants.py  freq_conversions.py
src/thymus/: __init__.py  _version.py  timeseries.py
tests/: test_freq_conversions.py  test_point.py  test_timeseries.py  test_tsproto.py  test_tssdict.py  test_tsslist.py
thymus/: __init__.py  _version.py  constants.py  freq_conversions.py  point.py  timeseries.py  tsproto.py  tssdict.py  tsslist.py
