[project]
name = "Thymus-timeseries"
description = "An intuitive library tracking dates and timeseries in common using NumPy arrays."
readme = {file = "README.md", content-type="text/markdown"}
version = "0.3.5"
authors = [{name="Don Smiley", email="dsmiley@sidorof.com"}]
dependencies = [
  "numpy",
]
license = {text = "MIT License"}
requires-python = ">= 3.10"

[project.urls]
Homepage = "https://github.com/sidorof/Thymus-timeseries"
Doc_URL = "https://sidorof.github.io/Thymus-timeseries/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

