[metadata]
name = Thymus-timeseries
description=An intuitive library tracking dates and timeseries in common using NumPy arrays.
long_description = file: README.md
version = 0.3.1

url = https://sidorof.github.io/Thymus-timeseries/

author = Don Smiley
author_email = dsmiley@sidorof.com
license = MIT
license_files = LICENSE.txt


[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy

python_requires = >= 3.9
[options.packages.find]
where=src

